# cob_control

./: README.md
cob_base_velocity_smoother/: CHANGELOG.rst  package.xml
cob_collision_velocity_filter/: CHANGELOG.rst  package.xml
cob_collision_velocity_filter/include/: cob_collision_velocity_filter.h
cob_collision_velocity_filter/src/: cob_collision_velocity_filter.cpp
cob_control/: CHANGELOG.rst  package.xml
cob_footprint_observer/: CHANGELOG.rst  package.xml
cob_hardware_emulation/: CHANGELOG.rst  package.xml
cob_twist_controller/launch/: example.launch
collision_velocity_filter/: CMakeLists.txt  package.xml
collision_velocity_filter/include/collision_velocity_filter/: collision_velocity_filter.hpp
collision_velocity_filter/launch/: collision_velocity_filter_node.launch.xml
collision_velocity_filter/src/: collision_velocity_filter.cpp
footprint_observer/: CMakeLists.txt  package.xml
footprint_observer/include/: footprint_observer.h
footprint_observer/include/footprint_observer/: footprint_observer.hpp
footprint_observer/src/: footprint_observer.cpp
