<package format="2">
  <name>cob_control</name>
  <version>0.8.24</version>
  <description>cob_control meta-package</description>

  <license>Apache 2.0</license>

  <url type="website">http://ros.org/wiki/cob_control</url>
  <!-- <url type="bugtracker"></url> -->

  <maintainer email="felixmessmer@gmail.com">Felix Messmer</maintainer>

  <buildtool_depend>catkin</buildtool_depend>

  <exec_depend>cob_base_velocity_smoother</exec_depend>
  <exec_depend>cob_collision_velocity_filter</exec_depend>
  <exec_depend>cob_footprint_observer</exec_depend>
  <exec_depend>cob_hardware_emulation</exec_depend>

  <export>
    <metapackage/>
  </export>
</package>
