<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>collision_velocity_filter</name>
  <version>1.0.0</version>
  <description>The cob_collision_velocity_filter package is a package for collision avoidance using teleoperation.</description>
  <!-- original authors -->
  <author>Matthias Gruhler</author>
  <author>Michal Spanel</author>
  <!-- ros2 port author -->
  <maintainer email="nibanovic@gmail.com">Nikola Banović</maintainer>
  <author email="nibanovic@gmail.com">Nikola Banović</author>

  <license>Apache 2.0</license>
  
  <buildtool_depend>ament_cmake</buildtool_depend>
  
  <depend>rclcpp</depend>
  <depend>geometry_msgs</depend>
  <depend>std_msgs</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <depend>nav_msgs</depend>
  <depend>visualization_msgs</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>