<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>footprint_observer</name>
  <version>1.0.0</version>
  <description>The footprint_observer package adjusts the footprint of the robot based on the setup (e.g. arm and/or tray).</description>
  <!-- original authors -->
  <author email="frm@ipa.fraunhofer.de">Florian Mirus</author>
  <!-- ros2 port author -->
  <maintainer email="nibanovic@gmail.com">Nikola Banović</maintainer>
  <author email="nibanovic@gmail.com">Nikola Banović</author>

  <license>Apache 2.0</license>
  
  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>rosidl_default_generators</buildtool_depend>

  <exec_depend>rosidl_default_runtime</exec_depend>
  
  <depend>rclcpp</depend>
  <depend>geometry_msgs</depend>
  <depend>std_msgs</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>

  <member_of_group>rosidl_interface_packages</member_of_group>
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>